--- a/index.html
+++ b/index.html
@@ -115,6 +115,36 @@
     </div>
     <!-- Site-header-hero -->
 
+    <!-- Site-Main  -->
+    <main class="site-main">
+        <section class="about">
+            <div class="container py-5">
+                <div class="row justify-content-between">
+                    <div class="col-12 col-lg-6 col-xl-6 my-3">
+                        <div class="about-image">
+                            <p class="about-work all-btn">
+                                my work for
+                                <span class="about-work__count">5+</span>
+                            </p>
+                            <img src="./img/about.png" alt="About image" class="about-image__img">
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-6 col-xl-6 my-3">
+                        <div class="about-desc">
+                            <h2 class="about-desc__title title">What is Frond-End</h2>
+                            <p class="about-desc__text">it is the development of of the user interface and functions that run on on the client side of a website or application
+                                This is everything  that a user sees when opening a or aweb page and with which he interacts.
+                                   <br> <br>
+                                This is everything that a user sees when opening a web page and with which he interacts.  </p>
+                                <a href="#!" class="about-desc__btn all-btn">go to work</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- Site-Main  -->
+
 
 
 
