--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
 
     <!-- Site-Main  -->
     <main class="site-main">
+
+        <!-- about section -->
         <section class="about">
             <div class="container py-5">
                 <div class="row justify-content-between">
@@ -142,8 +144,67 @@
                 </div>
             </div>
         </section>
+
+        <!-- capabilities -->
+        <section class="capabilities">
+            <div class="container">
+                <h2 class="capabilities-title title text-center">Capabilities</h2>
+                <div class="row align-items-center">
+                    <div class="col-12 col-lg-6 col-xl-6 my-2">
+                        <div class="accordion capabilities-accordion" id="accordionExample">
+                            <div class="accordion__item">
+                              <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion__button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                  <i class="fab fa-html5 fa-2x capabilities__icon"></i>
+                                  HTML
+                                  <i class="fas fa-sort-up capabilities-icon__up"></i>
+                                </button>
+                              </h2>
+                              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                <div class="accordion__body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Venenatis felis dui quis eget suspendisse rutrum orci. Elementum, ultrices dictum cras sit volutpat morbi adipiscing ut. Convallis faucibus ligula blandit enim. Accumsan est 
+                                </div>
+                              </div>
+                            </div>
+                            <div class="accordion__item">
+                              <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion__button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    <i class="fab fa-css3 fa-2x capabilities__icon"></i>
+                                    CSS
+                                    <i class="fas fa-sort-up capabilities-icon__up"></i>
+                                </button>
+                              </h2>
+                              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                                <div class="accordion__body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Venenatis felis dui quis eget suspendisse rutrum orci. Elementum, ultrices dictum cras sit volutpat morbi adipiscing ut. Convallis faucibus ligula blandit enim. Accumsan est 
+                                </div>
+                              </div>
+                            </div>
+                            <div class="accordion__item">
+                              <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion__button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    <i class="fab fa-bootstrap fa-2x capabilities__icon"></i>
+                                    BOOTSTRAP 5
+                                    <i class="fas fa-sort-up capabilities-icon__up"></i>
+                                </button>
+                              </h2>
+                              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                                <div class="accordion__body">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Venenatis felis dui quis eget suspendisse rutrum orci. Elementum, ultrices dictum cras sit volutpat morbi adipiscing ut. Convallis faucibus ligula blandit enim. Accumsan est 
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-12 col-lg-6 col-xl-6 my-2">
+                        <div class="capabilities-image">
+                            <img src="./img/capabilities.png" alt="Capabilites image" class="capabilities-image__item">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- Site-Main  -->
+
 
 
 
