--- a/index.html
+++ b/index.html
@@ -361,6 +361,33 @@
         </div>
       </div>
     </section>
+
+    <footer class="site-footer">
+      <div class="container">
+        <div class="row justify-content-start justify-content-lg-end">
+          <div class="col-12 col-lg-6 col-xl-6 text-center">
+            <a href="#!" class="logo"></a>
+            <ul class="footer-list flex-column flex-md-row d-md-flex justify-content-evenly">
+              <li class="footer-item">
+                <a href="" class="footer-link">about Me</a>
+              </li>  
+              <li class="footer-item">
+                <a href="" class="footer-link">Works</a>
+              </li>  
+              <li class="footer-item">
+                <a href="" class="footer-link">Contacts</a>
+              </li>  
+            </ul>
+
+            <div class="footer-contact d-flex justify-content-evenly">
+              <a href="tel:998950018261" class="footer-phone">(90) 077 71 67</a>
+              <a href="mailto:quvondiq077@gmail.com" class="footer-mail">quvondiq077@gmail.com</a>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </footer>
   </main>
   <!-- Site-Main  -->
 
